--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html{
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif !important;
 }
 
 body{
@@ -13,13 +13,18 @@ body{
 nav{
     background-color: cornflowerblue;
     padding: 2px 40px;
+    font-family: "Poppins", sans-serif;
 }
 
+
+.btn-aliceblue {
+    background-color: aliceblue !important;
+    color: black;
+}
 .main-menu{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
 }
 
 .hamburger-button {
@@ -73,7 +78,9 @@ nav{
     border-radius: 15px;
 }
 
-
+.container-md{
+    width:50% !important;
+}
 /*INTRO SECTION */
 
 
@@ -94,6 +101,7 @@ nav{
     border: 1px solid rgb(185, 195, 212);
     border-radius: 10px;
     box-shadow: 5px 5px 30px 30px rgb(186, 201, 230);
+    font-family: "Poppins", sans-serif;
 }
 
 .introduction{
@@ -226,6 +234,7 @@ nav{
     margin: 3rem auto;
     padding: 0 1rem;
     background-color: aliceblue;
+    font-family: "Poppins", sans-serif;
 }
 
 h1 {
@@ -419,7 +428,7 @@ textarea {
 
 .project-edit-button{
     text-decoration: none;
-    background-color: cornflowerblue;
+    background-color: aliceblue;
     color: black;
     width: 49%;
     padding: 5px 15px;
