feat:express & handlebars intergrated

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Feby's page</title>
-        <link rel="icon" href="assets/img/FZ-removebg-preview.png">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="icon" href="/img/FZ-removebg-preview.png">
+        <link rel="stylesheet" href="/css/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     </head>
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-body-cornflowerblue">
             <div class="container-sm">
                 <a class="navbar-brand" href="#">
-                <img src="assets/img/FZ-removebg-preview.png" alt="personal-web" width="90" height="70">
+                <img src="/img/FZ-removebg-preview.png" alt="personal-web" width="90" height="70">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,25 +22,25 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="project.html">My Project</a>
+                    <a class="nav-link" href="project">My Project</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="testimonials.html">Testimonials</a>
+                    <a class="nav-link" href="testimonials">Testimonials</a>
                   </li>
                 </ul>
-                <a class="btn btn-aliceblue" href="contact.html">Contact Me</a>
+                <a class="btn btn-aliceblue" href="contact">Contact Me</a>
               </div>
             </div>
           </nav>
 
         <div id="mobile-menu-list" class="mobile-menu-list" class="mobile-menu-hide">
-            <a href="index.html" class="menu-active">Home</a>
-            <a href="project.html">My Project</a>
-            <a href="testimonials.html">Testimonials</a>
-            <a href="contact.html">Contact Me</a>
+            <a href="/" class="menu-active">Home</a>
+            <a href="project">My Project</a>
+            <a href="testimonials">Testimonials</a>
+            <a href="contact">Contact Me</a>
         </div>
 
         <!-- PROFILE CARD -->
@@ -53,39 +53,40 @@
                     </div>
                     <div class="introductions">
                         <a class="button1" href="contact.html">Contact</a>
-                        <a href="#">Download CV <img src="assets/img/downloads.jpg" alt=""></a>
+                        <a href="#">Download CV <img src="/img/downloads.jpg" alt=""></a>
                     </div>
                     <!-- SOCIAL MEDIA -->
                         <div id="socials">
                            <a href="#">
-                                <img src="assets/img/facebook.png" alt="">
+                                <img src="/img/facebook.png" alt="">
                             </a>
                             <a href="#">
-                                <img src="assets/img/twitter.png" alt="">
+                                <img src="/img/twitter.png" alt="">
                             </a>
                             <a href="#">
-                                <img src="assets/img/instagram.png" alt="">
+                                <img src="/img/instagram.png" alt="">
                             </a>
                             <a href="#">
-                                <img src="assets/img/mail.png" alt="">
+                                <img src="/img/mail.png" alt="">
                             </a>
                             <a href="#">
-                                <img src="assets/img/whatsapp.png" alt="">
+                                <img src="/img/whatsapp.png" alt="">
                             </a>
                         </div>
             </section>
                 <!--    introduction -->
             <section id="card-section">
                 <div class="profile-card">
-                    <img src="assets/img/pinterest/1740056289351.jpg">
+                    <img src="/img/pinterest/1740056289351.jpg">
                     <h2>Feby Rahmadhani Zasa</h2>
                     <p>Dumbways.id's Student</p>
                 </div>
             </section>
         </main>
 
-        <script src="assets/js/contact-form.js"></script>
-        <script src="assets/js/navbar.js"></script>
+        <script src="/js/contact-form.js"></script>
+        <script src="/js/navbar.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     </body>
 </html>
